# editor

./: .gitignore  Cargo.toml  editor.rs
cargo/: Cargo.toml  README.md  lib.rs  main.rs
editor/: Cargo.toml  main.rs
editor/src/: main.rs
highlight/: Cargo.toml  lib.rs
highlight/src/: lib.rs
ipc/: Cargo.toml  lib.rs
rust/: Cargo.toml  ide.rs  lib.rs
rust-analyzer/: Cargo.toml
rust-analyzer/src/: lib.rs
server/: Cargo.toml  main.rs
src/: main.rs
