[workspace]
members= ["cargo","editor","ipc","rust","server"]

[patch.'https://github.com/Matthias-Fauconneau/rust-analyzer.git']
types= {path= 'rust-analyzer/crates/types'}

[patch.'https://github.com/rust-analyzer/rust-analyzer.git']
ide= {path= 'rust-analyzer/crates/ide'}
paths= {path= 'rust-analyzer/crates/paths'}
vfs= {path= 'rust-analyzer/crates/vfs'}
rust-analyzer= {path= 'rust-analyzer/crates/rust-analyzer'}

#[profile.dev.package.core]
#opt-level = 3
#[profile.dev.package.std]
#opt-level = 3

[profile.dev.package.rust]
opt-level = 3
[profile.dev.package.ipc]
opt-level = 3
[profile.dev.package.bincode]
opt-level = 3
[profile.dev.package.byteorder]
opt-level = 3
[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.unicode-segmentation]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
