cargo-features=['edition2021']
package= {name= 'editor', version= '0.0.0', edition= '2021'}
bin= [{name= 'editor', path= 'editor.rs'}]
workspace= {members= ['ipc','rust','server']}
#features={default= ['trace']}

[dependencies]
derive_more= '*'
fehler= '*'
error= {git= 'https://github.com/Matthias-Fauconneau/error'}
ui= {path= '../ui', features= ['color','text','app']}
rust= {path= 'rust'}
cargo= {path= 'cargo'}
trace= {git= 'https://github.com/Matthias-Fauconneau/trace', optional= true}

[patch.'https://github.com/Matthias-Fauconneau/rust-analyzer']
types= {path= 'rust-analyzer/crates/types'}

[patch.'https://github.com/rust-analyzer/rust-analyzer']
ide= {path= 'rust-analyzer/crates/ide'}
paths= {path= 'rust-analyzer/crates/paths'}
vfs= {path= 'rust-analyzer/crates/vfs'}
rust-analyzer= {path= 'rust-analyzer/crates/rust-analyzer'}

[profile.dev.package.rust]
opt-level = 3
[profile.dev.package.ipc]
opt-level = 3
[profile.dev.package.bincode]
opt-level = 3
[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.unicode-segmentation]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.ui]
opt-level = 3
[profile.dev.package.editor]
opt-level = 0
