package={name='editor', version='0.0.0', edition='2021'}
bin=[{name='editor', path='editor.rs'}]
workspace={members=['ipc','rust','server']}

[dependencies]
derive_more='*'
fehler='*'
anyhow='*'
ui={git='https://github.com/Matthias-Fauconneau/ui', features= ['edit']}
rust={path='rust'}
cargo={path='cargo'}
trace={git='https://github.com/Matthias-Fauconneau/trace', optional=true}

[patch.crates-io]
ash-window={git='https://github.com/Matthias-Fauconneau/ash'}
ash={git='https://github.com/Matthias-Fauconneau/ash'}

[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}

[patch.'https://github.com/Matthias-Fauconneau/num']
num={path='../num'}
[patch.'https://github.com/Matthias-Fauconneau/vector']
vector={path='../vector'}
[patch.'https://github.com/Matthias-Fauconneau/image']
image={path='../image'}

[patch.'https://github.com/rust-lang/rust-analyzer']
text-edit={path='../rust-analyzer/crates/text-edit'}
vfs={path='../rust-analyzer/crates/vfs'}
base-db={path='../rust-analyzer/crates/base-db'}
types={path='../rust-analyzer/crates/types'}
ide={path='../rust-analyzer/crates/ide'}
paths={path='../rust-analyzer/crates/paths'}
rust-analyzer={path='../rust-analyzer/crates/rust-analyzer'}

[profile.dev.package.rust]
opt-level = 3
[profile.dev.package.ipc]
opt-level = 3
[profile.dev.package.bincode]
opt-level = 3
[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.unicode-segmentation]
opt-level = 3
#[profile.dev.package.ttf-parser]
#opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.ui]
opt-level = 3
