cargo-features=['edition2021']
package= {name= 'editor', version= '0.0.0', edition= '2021'}
bin= [{name= 'editor', path= 'main.rs'}]

[dependencies]
derive_more= '*'
fehler= '*'
error= {package='anyhow', version= '*'}
ui= {path= '../ui', features= ['color','text','app']}
rust= {path= '../rust'}
cargo= {path= '../cargo'}
