[package]
name= 'ipc'
description = 'Unix IPC'
repository= 'https://github.com/Matthias-Fauconneau/editor'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

[dependencies]
anyhow = ''
fehler = ''
serde = {version='',features=["derive"]}
bincode = ''
sc = ''
inotify = ''
fork = ''

[lib]
path = 'lib.rs'
