cargo-features=['edition2021']
package= {name= 'ipc', version= '0.0.0', edition= '2021', description = 'Unix IPC', repository= 'https://github.com/Matthias-Fauconneau/editor'}
lib={path = 'lib.rs'}

[dependencies]
anyhow= '*'
fehler= '*'
serde= {version='*',features=["derive"]}
bincode= '*'
rsix= '*'
inotify= '*'
fork= '*'
