[package]
name = 'rust-analyzer'
version = '0.0.0'
authors = ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition = '2018'
description = "rust-analyzer crates hub wrapper as a dylib to speed up linking"
repository = "https://github.com/Matthias-Fauconneau/editor"

[lib]
crate_type = ["dylib"] # speed up linking

[dependencies]
anyhow = ''
fehler = ''
log = ''
env_logger = ''
parking_lot = ''
crossbeam-channel = ''
globset = ''
rustc-hash = ''
ra_vfs = ''
ra_prof = { path = '../../rust-analyzer/crates/ra_prof' }
ra_db = { path = '../../rust-analyzer/crates/ra_db' }
ra_project_model = { path = '../../rust-analyzer/crates/ra_project_model' }
ra_syntax = { path = '../../rust-analyzer/crates/ra_syntax' }
ra_ide = { path = '../../rust-analyzer/crates/ra_ide' }
