cargo-features=['edition2021']
package= {name= 'rust', version= '0.0.0', edition= '2021', description= 'Rust analyzer semantic highlighting', repository= 'https://github.com/Matthias-Fauconneau/editor'}
lib={path= 'lib.rs'}

[dependencies]
error= {git='https://github.com/Matthias-Fauconneau/error'}
fehler= '*'
serde= '*'
ipc= {path='../ipc'}
text_edit= {git='https://github.com/Matthias-Fauconneau/rust-analyzer'}
types= {features=['serde'], git='https://github.com/Matthias-Fauconneau/rust-analyzer'}
