cargo-features=['edition2021']
package={name='rust', version='0.0.0', edition='2021', description='Analyzer client', repository='https://github.com/Matthias-Fauconneau/editor'}
lib={path='lib.rs'}

[dependencies]
error={git='https://github.com/Matthias-Fauconneau/error'}
fehler='*'
serde='*'
ipc={path='../ipc'}
text-size={features=['serde'], version='*'}
text_edit={features=['serde'], git='https://github.com/Matthias-Fauconneau/rust-analyzer'}
types={features=['serde'], git='https://github.com/Matthias-Fauconneau/rust-analyzer'}
vfs={features=['serde'], git='https://github.com/Matthias-Fauconneau/rust-analyzer'}
base_db={features=['serde'], git='https://github.com/Matthias-Fauconneau/rust-analyzer'}
