package={name='rust', version='0.0.0', edition='2021', description='Analyzer client', repository='https://github.com/Matthias-Fauconneau/editor'}
lib={path='lib.rs'}

[dependencies]
fehler='*'
serde='*'
ipc={path='../ipc'}
text-size={features=['serde'], version='*'}
text-edit={features=['serde'], git='https://github.com/rust-lang/rust-analyzer'}
types={features=['serde'], git='https://github.com/rust-lang/rust-analyzer'}
vfs={features=['serde'], git='https://github.com/rust-lang/rust-analyzer'}
base-db={features=['serde'], git='https://github.com/rust-lang/rust-analyzer'}
