cargo-features=['edition2021']
package= {name= 'server', version= '0.0.0', edition= '2021', description= 'Rust analyzer semantic highlighting', repository= 'https://github.com/Matthias-Fauconneau/editor'}
bin= [{name= 'server', path= 'main.rs'}]

[dependencies]
fehler= '*'
error= {git= 'https://github.com/Matthias-Fauconneau/error'}
ipc= {path= '../ipc'}
rust= {path= '../rust'}
text-size= '*'
ide= {git= 'https://github.com/rust-analyzer/rust-analyzer'}
paths= {git= 'https://github.com/rust-analyzer/rust-analyzer'}
vfs= {git= 'https://github.com/rust-analyzer/rust-analyzer'}
rust-analyzer= {git= 'https://github.com/rust-analyzer/rust-analyzer'}
