package= {name= 'server', version= '0.0.0', description= 'Rust analyzer semantic highlighting', edition='2021'}
bin= [{name= 'server', path= 'main.rs'}]

[dependencies]
fehler='*'
anyhow='*'
ipc= {path= '../ipc'}
rust= {path= '../rust'}
text-size= {version='*', features=['serde']}
ide= {git='https://github.com/rust-lang/rust-analyzer'}
vfs= {git= 'https://github.com/rust-lang/rust-analyzer'}
rust-analyzer= {git= 'https://github.com/rust-lang/rust-analyzer'}
